[anti-aging] made some progress on reasons

--- a/anti-aging/references.bib
+++ b/anti-aging/references.bib
@@ -1,6 +1,6 @@
 @misc{AntiAgin75:online,
 author = {JackH},
-title = {Anti-Aging: State of the Art - LessWrong},
+title = {{Anti-Aging: State of the Art - LessWrong}},
 howpublished = {\url{https://www.lesswrong.com/posts/RcifQCKkRc9XTjxC2/anti-aging-state-of-the-art}},
 month = {12},
 year = {2020},
@@ -9,7 +9,7 @@ note = {(Accessed on 2021-05-24)}
 
 @article{10.1111/acel.13230,
 author={Santesmasses, Didac and Castro, Jos{\'e} Pedro and Zenin, Aleksandr A and Shindyapina, Anastasia V and Gerashchenko, Maxim V and Zhang, Bohan and Kerepesi, Csaba and Yim, Sun Hee and Fedichev, Peter O and Gladyshev, Vadim N},
-title = {COVID-19 is an emergent disease of aging},
+title = {{COVID-19 is an emergent disease of aging}},
 journal = {Aging Cell},
 volume = {19},
 number = {10},
@@ -36,7 +36,7 @@ year = {2020}
 
 @article{10.1093/ppar/prz022,
     author = {Kaeberlein, Matt},
-    title = "{It is Time to Embrace 21st-Century Medicine}",
+    title = {{It is Time to Embrace 21st-Century Medicine}},
     journal = {Public Policy \& Aging Report},
     volume = {29},
     number = {4},
@@ -52,8 +52,8 @@ year = {2020}
 
 @misc{Greenlan67:online,
 author = {Elizabeth Pennisi},
-title = {Greenland shark may live 400 years, smashing longevity record | Science | AAAS},
-howpublished = {\url{https://www.sciencemag.org/news/2016/08/greenland-shark-may-live-400-years-smashing-longevity-record#:~:text=Greenland%20shark%20may%20live%20400%20years%2C%20smashing%20longevity%20record,-By%20Elizabeth%20Pennisi&text=Imagine%20having%20to%20wait%20a,by%20at%20least%20a%20century.}},
+title = {{Greenland shark may live 400 years, smashing longevity record | Science | AAAS}},
+howpublished = {\url{https://www.sciencemag.org/news/2016/08/greenland-shark-may-live-400-years-smashing-longevity-record}},
 month = {08},
 year = {2016},
 note = {(Accessed on 2021-05-24)}
@@ -61,7 +61,7 @@ note = {(Accessed on 2021-05-24)}
 
 @article{martinez1998mortality,
   title={Mortality patterns suggest lack of senescence in hydra},
-  author={Mart{\i}nez, Daniel E},
+  author={Mart{\i}ñez, Daniel E},
   journal={Experimental gerontology},
   volume={33},
   number={3},
@@ -71,7 +71,7 @@ note = {(Accessed on 2021-05-24)}
 }
 
 @article{munro2012extreme,
-  title={The extreme longevity of Arctica islandica is associated with increased peroxidation resistance in mitochondrial membranes},
+  title={{The extreme longevity of Arctica islandica is associated with increased peroxidation resistance in mitochondrial membranes}},
   author={Munro, Daniel and Blier, Pierre U},
   journal={Aging cell},
   volume={11},
@@ -82,7 +82,7 @@ note = {(Accessed on 2021-05-24)}
 }
 
 @article{ruby2018naked,
-  title={Naked mole-rat mortality rates defy Gompertzian laws by not increasing with age},
+  title={{Naked mole-rat mortality rates defy Gompertzian laws by not increasing with age}},
   author={Ruby, J Graham and Smith, Megan},
   journal={elife},
   volume={7},
@@ -92,7 +92,7 @@ note = {(Accessed on 2021-05-24)}
 }
 
 @article{miller2001escaping,
-  title={Escaping senescence: demographic data from the three-toed box turtle (Terrapene carolina triunguis)},
+  title={{Escaping senescence: demographic data from the three-toed box turtle (Terrapene carolina triunguis)}},
   author={Miller, JK},
   journal={Experimental Gerontology},
   volume={36},
@@ -101,3 +101,75 @@ note = {(Accessed on 2021-05-24)}
   year={2001},
   publisher={Elsevier}
 }
+@article{bulterijs2015time,
+  title={It is time to classify biological aging as a disease},
+  author={Bulterijs, Sven and Hull, Raphaella S and Bj{\"o}rk, Victor CE and Roy, Avi G},
+  journal={Frontiers in genetics},
+  volume={6},
+  pages={205},
+  year={2015},
+  publisher={Frontiers}
+}
+
+
+@misc{Geroscie32:online,
+author = {Brunemeier, Sebastian},
+title = {{Geroscience and Biotech Venture Capital - YouTube}},
+howpublished = {\url{https://www.youtube.com/watch?v=AM97A_5jFgk&t=645s}},
+month = {11},
+year = {2020},
+note = {(Accessed on 2021-05-26)}
+}
+
+@article{passos2007mitochondrial,
+  title={Mitochondrial dysfunction accounts for the stochastic heterogeneity in telomere-dependent senescence},
+  author={Passos, Jo{\~a}o F and Saretzki, Gabriele and Ahmed, Shaheda and Nelson, Glyn and Richter, Torsten and Peters, Heiko and Wappler, Ilka and Birket, Matthew J and Harold, Graham and Schaeuble, Karin and others},
+  journal={PLoS Biol},
+  volume={5},
+  number={5},
+  pages={e110},
+  year={2007},
+  publisher={Public Library of Science}
+}
+
+@misc{CorePath13:online,
+author = {John S Wentworth},
+title = {{Core Pathways of Aging - LessWrong}},
+howpublished = {\url{https://www.lesswrong.com/posts/ui6mDLdqXkaXiDMJ5/core-pathways-of-aging}},
+month = {3},
+year = {2021},
+note = {(Accessed on 2021-05-26)}
+}
+
+@article{passos2010feedback,
+  title={Feedback between p21 and reactive oxygen production is necessary for cell senescence},
+  author={Passos, Joao F and Nelson, Glyn and Wang, Chunfang and Richter, Torsten and Simillion, Cedric and Proctor, Carole J and Miwa, Satomi and Olijslagers, Sharon and Hallinan, Jennifer and Wipat, Anil and others},
+  journal={Molecular systems biology},
+  volume={6},
+  number={1},
+  pages={347},
+  year={2010},
+  publisher={John Wiley \& Sons, Ltd Chichester, UK}
+}
+
+@article{botta2019changes,
+  title={Changes in life expectancy for cancer patients over time since diagnosis},
+  author={Botta, Laura and Dal Maso, Luigino and Guzzinati, Stefano and Panato, Chiara and Gatta, Gemma and Trama, Annalisa and Rugge, Massimo and Tagliabue, Giovanna and Casella, Claudia and Caruso, Bianca and others},
+  journal={Journal of advanced research},
+  volume={20},
+  pages={153--159},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{livingstone2015estimated,
+  title={{Estimated life expectancy in a Scottish cohort with type 1 diabetes, 2008-2010}},
+  author={Livingstone, Shona J and Levin, Daniel and Looker, Helen C and Lindsay, Robert S and Wild, Sarah H and Joss, Nicola and Leese, Graham and Leslie, Peter and McCrimmon, Rory J and Metcalfe, Wendy and others},
+  journal={Jama},
+  volume={313},
+  number={1},
+  pages={37--44},
+  year={2015},
+  publisher={American Medical Association}
+}
+
