--- a/anti-aging/setup.tex
+++ b/anti-aging/setup.tex
@@ -6,19 +6,21 @@
 \usepackage{pdfpages}
 % \usepackage[dvipsnames]{xcolor}
 
+% \usepackage[style=alphabetic,maxnames=3,maxalphanames=5]{biblatex}
+% \addbibresource{references.bib}
 
 % \usepackage{minted}
 % \usemintedstyle{pastie}
 
 
-\usetheme[numbering=counter, progressbar=frametitle, subsectionpage=progressbar]{metropolis}
+\usetheme[numbering=counter, progressbar=frametitle, subsectionpage=progressbar, block=fill]{metropolis}
 
 
 % \date{\today}
 \date{22. Juli 2021}
 
 
-% \institute{Karlsruhe Institute of Technology}
+\institute{Seminar Bioinformatics}
 \titlegraphic{\vspace{4cm} \hspace{7cm} \includegraphics[height=2cm]{Logo_KIT}}
 % \titlegraphic{\vspace{4cm} \hspace{7cm} \Huge\LaTeX}
 
