--- a/anti-aging/main.tex
+++ b/anti-aging/main.tex
@@ -58,8 +58,10 @@
     Questions?
 \end{frame}
 
+
 \begin{frame}[c,fragile,allowframebreaks]{Sources}
-\bibliographystyle{plainnat}
+% \bibliographystyle{plainnat}
+\bibliographystyle{apalike}
 % \bibliographystyle{ieeetr}
 \bibliography{references.bib}
 \end{frame}
