[anti-aging] made progress on presentation

--- a/anti-aging/references.bib
+++ b/anti-aging/references.bib
@@ -173,3 +173,23 @@ note = {(Accessed on 2021-05-26)}
   publisher={American Medical Association}
 }
 
+@misc{untitled1:online,
+author = {{The British Diabetic Association}},
+title = {{Diabetes in the UK 2010: Key statistics on diabetes}},
+howpublished = {\url{https://www.diabetes.org.uk/resources-s3/2017-11/diabetes_in_the_uk_2010.pdf}},
+month = {3},
+year = {2010},
+note = {(Accessed on 2021-05-27)}
+}
+
+@article{mahmoudi2019turning,
+  title={Turning back time with emerging rejuvenation strategies},
+  author={Mahmoudi, Salah and Xu, Lucy and Brunet, Anne},
+  journal={Nature cell biology},
+  volume={21},
+  number={1},
+  pages={32--43},
+  year={2019},
+  publisher={Nature Publishing Group}
+}
+
