[anti-aging] made progress on the train

--- a/anti-aging/references.bib
+++ b/anti-aging/references.bib
@@ -193,3 +193,23 @@ note = {(Accessed on 2021-05-27)}
   publisher={Nature Publishing Group}
 }
 
+@misc{Homeosta76:online,
+author = {John S Wentworth},
+title = {Homeostasis and “Root Causes” in Aging - LessWrong},
+howpublished = {\url{https://www.lesswrong.com/s/3hfjaztptwEt2cCve/p/d4DvqS88Q29ZaJAj3?commentId=RuF49JiWpbEHXdMrw}},
+month = {01},
+year = {2020},
+note = {(Accessed on 2021-05-31)}
+}
+
+@article{szekely2005werner,
+  title={Werner protein protects nonproliferating cells from oxidative DNA damage},
+  author={Szekely, Anna M and Bleichert, Franziska and N{\"u}mann, Astrid and Van Komen, Stephen and Manasanch, Elisabeth and Nasr, Abdelhakim Ben and Canaan, Allon and Weissman, Sherman M},
+  journal={Molecular and cellular biology},
+  volume={25},
+  number={23},
+  pages={10492},
+  year={2005},
+  publisher={American Society for Microbiology (ASM)}
+}
+
