[anti-aging] made progress

--- a/anti-aging/main.tex
+++ b/anti-aging/main.tex
@@ -30,6 +30,7 @@
 \include{chapters/why-problem}
 \include{chapters/necessary}
 \include{chapters/aging}
+\include{chapters/active}
 \include{chapters/slow-aging}
 \include{chapters/personal-strategies}
 \include{chapters/bioinformatics}
