--- a/anti-aging/references.bib
+++ b/anti-aging/references.bib
@@ -195,7 +195,7 @@ note = {(Accessed on 2021-05-27)}
 
 @misc{Homeosta76:online,
 author = {John S Wentworth},
-title = {Homeostasis and “Root Causes” in Aging - LessWrong},
+title = {{Homeostasis and “Root Causes” in Aging - LessWrong}},
 howpublished = {\url{https://www.lesswrong.com/s/3hfjaztptwEt2cCve/p/d4DvqS88Q29ZaJAj3?commentId=RuF49JiWpbEHXdMrw}},
 month = {01},
 year = {2020},
@@ -203,7 +203,7 @@ note = {(Accessed on 2021-05-31)}
 }
 
 @article{szekely2005werner,
-  title={Werner protein protects nonproliferating cells from oxidative DNA damage},
+  title={{Werner protein protects nonproliferating cells from oxidative DNA damage}},
   author={Szekely, Anna M and Bleichert, Franziska and N{\"u}mann, Astrid and Van Komen, Stephen and Manasanch, Elisabeth and Nasr, Abdelhakim Ben and Canaan, Allon and Weissman, Sherman M},
   journal={Molecular and cellular biology},
   volume={25},
@@ -211,5 +211,132 @@ note = {(Accessed on 2021-05-31)}
   pages={10492},
   year={2005},
   publisher={American Society for Microbiology (ASM)}
+}
+
+@article{alhmoud2020dna,
+  title={{DNA damage/repair management in cancers}},
+  author={Alhmoud, Jehad F and Woolley, John F and Moustafa, Ala-Eddin Al and Malki, Mohammed Imad},
+  journal={Cancers},
+  volume={12},
+  number={4},
+  pages={1050},
+  year={2020},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{frankenberg1989review,
+  title={{Review of repair kinetics for DNA damage induced in eukaryotic cells in vitro by ionizing radiation}},
+  author={Frankenberg-Schwager, Marlis},
+  journal={Radiotherapy and oncology},
+  volume={14},
+  number={4},
+  pages={307--320},
+  year={1989},
+  publisher={Elsevier}
+}
+
+@article{karin2018senescent,
+  title={Senescent cells and the dynamics of aging},
+  author={Karin, Omer and Agrawal, Amit and Porat, Ziv and Krizhanovsky, Valery and Alon, Uri},
+  journal={bioRxiv},
+  pages={470500},
+  year={2018},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{yamagata2012rapid,
+  title={{Rapid turnover of DNA methylation in human cells}},
+  author={Yamagata, Yoshiaki and Szab{\'o}, P{\`a}l and Sz{\"u}ts, David and Bacquet, Caroline and Ar{\'a}nyi, Tam{\`a}s and P{\'a}ldi, Andras},
+  journal={Epigenetics},
+  volume={7},
+  number={2},
+  pages={141--145},
+  year={2012},
+  publisher={Taylor \& Francis}
+}
+
+@article{lu2019dna,
+  title={{DNA methylation GrimAge strongly predicts lifespan and healthspan}},
+  author={Lu, Ake T and Quach, Austin and Wilson, James G and Reiner, Alex P and Aviv, Abraham and Raj, Kenneth and Hou, Lifang and Baccarelli, Andrea A and Li, Yun and Stewart, James D and others},
+  journal={Aging (Albany NY)},
+  volume={11},
+  number={2},
+  pages={303},
+  year={2019},
+  publisher={Impact Journals, LLC}
+}
+
+@article{ginno2020genome,
+  title={{A genome-scale map of DNA methylation turnover identifies site-specific dependencies of DNMT and TET activity}},
+  author={Ginno, Paul Adrian and Gaidatzis, Dimos and Feldmann, Angelika and Hoerner, Leslie and Imanci, Dilek and Burger, Lukas and Zilbermann, Frederic and Peters, Antoine HFM and Edenhofer, Frank and Smallwood, S{\'e}bastien A and others},
+  journal={Nature communications},
+  volume={11},
+  number={1},
+  pages={1--16},
+  year={2020},
+  publisher={Nature Publishing Group}
+}
+
+@article{xie2018epigenetic,
+  title={Epigenetic alterations in longevity regulators, reduced life span, and exacerbated aging-related pathology in old father offspring mice},
+  author={Xie, Kan and Ryan, Devon P and Pearson, Brandon L and Henzel, Kristin S and Neff, Frauke and Vidal, Ramon O and Hennion, Magali and Lehmann, Isabelle and Schleif, Melvin and Schr{\"o}der, Susanne and others},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={115},
+  number={10},
+  pages={E2348--E2357},
+  year={2018},
+  publisher={National Acad Sciences}
+}
+
+@article{sen2016epigenetic,
+  title={Epigenetic mechanisms of longevity and aging},
+  author={Sen, Payel and Shah, Parisha P and Nativio, Raffaella and Berger, Shelley L},
+  journal={Cell},
+  volume={166},
+  number={4},
+  pages={822--839},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{saul2021epigenetics,
+  title={{Epigenetics of Aging and Aging-Associated Diseases}},
+  author={Saul, Dominik and Kosinsky, Robyn Laura},
+  journal={International Journal of Molecular Sciences},
+  volume={22},
+  number={1},
+  pages={401},
+  year={2021},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{schmutz2016shelterin,
+  title={Shelterin},
+  author={Schmutz, Isabelle and de Lange, Titia},
+  journal={Current Biology},
+  volume={26},
+  number={10},
+  pages={R397--R399},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@misc{NintilTh68:online,
+author = {Ricón, José Luis},
+title = {{Nintil - The Longevity FAQ}},
+howpublished = {\url{https://nintil.com/longevity}},
+month = {01},
+year = {2020},
+note = {(Accessed on 2021-06-01)}
+}
+
+@article{victorelli2017telomeres,
+  title={Telomeres and cell senescence-size matters not},
+  author={Victorelli, Stella and Passos, Jo{\~a}o F},
+  journal={EBioMedicine},
+  volume={21},
+  pages={14--20},
+  year={2017},
+  publisher={Elsevier}
 }
 
