[anti-aging] update progress

--- a/anti-aging/references.bib
+++ b/anti-aging/references.bib
@@ -340,3 +340,15 @@ note = {(Accessed on 2021-06-01)}
   publisher={Elsevier}
 }
 
+@article{folgueras2018mouse,
+  title={Mouse models to disentangle the hallmarks of human aging},
+  author={Folgueras, Alicia R and Freitas-Rodr{\'\i}guez, Sandra and Velasco, Gloria and L{\'o}pez-Ot{\'\i}n, Carlos},
+  journal={Circulation research},
+  volume={123},
+  number={7},
+  pages={905--924},
+  year={2018},
+  publisher={Am Heart Assoc}
+}
+
+
