[comm] update base materials with a lot of notes

--- a/communication/setup.tex
+++ b/communication/setup.tex
@@ -11,7 +11,7 @@
 % \usemintedstyle{pastie}
 
 
-\usetheme[numbering=counter, progressbar=frametitle, subsectionpage=progressbar]{metropolis}
+\usetheme[numbering=counter, progressbar=frametitle, subsectionpage=progressbar, block=fill]{metropolis}
 
 
 % \date{\today}
@@ -19,8 +19,8 @@
 
 
 \institute{Fachschaftsseminar FSMI 2021}
-% \titlegraphic{\vspace{4cm} \hspace{7cm} \includegraphics[height=2cm]{Logo_INST}}
-\titlegraphic{\vspace{4cm} \hspace{7cm} \Huge\LaTeX}
+\titlegraphic{\vspace{4cm} \hspace{7cm} \includegraphics[height=2.5cm]{FS-Eule-KIT}}
+% \titlegraphic{\vspace{4cm} \hspace{7cm} \Huge\LaTeX}
 
 % attempt to reduce space between tableofcontent items in e.g. sectionpage or agenda
 \makeatletter
