[anti-aging] restructured and incorporated feedback

--- a/anti-aging/references.bib
+++ b/anti-aging/references.bib
@@ -351,4 +351,18 @@ note = {(Accessed on 2021-06-01)}
   publisher={Am Heart Assoc}
 }
 
+@article{camell2021senolytics,
+  title={Senolytics reduce coronavirus-related mortality in old mice},
+  author={Camell, Christina D and Yousefzadeh, Matthew J and Zhu, Yi and Prata, Larissa GP Langhi and Huggins, Matthew A and Pierson, Mark and Zhang, Lei and O’Kelly, Ryan D and Pirtskhalava, Tamar and Xun, Pengcheng and others},
+  journal={Science},
+  year={2021},
+  publisher={American Association for the Advancement of Science}
+}
+
+@phdthesis{walter2015transposon,
+  title={{Transposon regulation upon dynamic loss of DNA methylation}},
+  author={Walter, Marius},
+  year={2015},
+  school={Universit{\'e} Pierre et Marie Curie-Paris VI}
+}
 
