[comm] built some slides

--- a/communication/setup.tex
+++ b/communication/setup.tex
@@ -11,6 +11,7 @@
 % \usemintedstyle{pastie}
 
 
+
 \usetheme[numbering=counter, progressbar=frametitle, subsectionpage=progressbar, block=fill]{metropolis}
 
 
@@ -81,7 +82,7 @@
     \usebeamerfont{section title}
     % \insertsectionhead\\[-1ex]
     \tableofcontents[currentsection, hideallsubsections]
-    % \usebeamertemplate*{progress bar in section page}
+    \usebeamertemplate*{progress bar in section page}
   \end{minipage}
 \end{frame}
 }
