[comm] add motivation
motivation section and slide

--- a/communication/main.tex
+++ b/communication/main.tex
@@ -16,8 +16,8 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\include{chapters/introduction}
 \include{chapters/principles-effective-communication}
-% \include{chapters/introduction}
 \include{chapters/practical}
 % '\include'
 % - gives speed bonus when building, through caching in a seperate *.aux file
