[comm] added link to presentation, small changes

--- a/communication/main.tex
+++ b/communication/main.tex
@@ -42,6 +42,6 @@
 % \bibliography{references.bib}
 % \end{frame}
 
-% \include{chapters/additional}
+\include{chapters/additional}
 
 \end{document}
