[anti-aging] made substantial progress

--- a/anti-aging/references.bib
+++ b/anti-aging/references.bib
@@ -366,3 +366,99 @@ note = {(Accessed on 2021-06-01)}
   school={Universit{\'e} Pierre et Marie Curie-Paris VI}
 }
 
+@article{malaquin2016keeping,
+  title={Keeping the senescence secretome under control: molecular reins on the senescence-associated secretory phenotype},
+  author={Malaquin, Nicolas and Martinez, Aur{\'e}lie and Rodier, Francis},
+  journal={Experimental gerontology},
+  volume={82},
+  pages={39--49},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@misc{DNADamag68:online,
+author = {{Cell Signaling Technology}},
+title = {{DNA Damage Response | Cell Signaling Technology}},
+howpublished = {\url{https://www.cellsignal.de/pathways/dna-damage-response-pathway}},
+month = {March},
+year = {2021},
+note = {(Accessed on 2021-07-03)}
+}
+
+@article{hanjani2018protein,
+  title={Protein restriction, epigenetic diet, intermittent fasting as new approaches for preventing age-associated diseases},
+  author={Hanjani, Nazanin Asghari and Vafa, Mohammadreza},
+  journal={International journal of preventive medicine},
+  volume={9},
+  year={2018},
+  publisher={Wolters Kluwer--Medknow Publications}
+}
+
+@article{conese2017fountain,
+  title={The fountain of youth: a tale of parabiosis, stem cells, and rejuvenation},
+  author={Conese, Massimo and Carbone, Annalucia and Beccia, Elisa and Angiolillo, Antonella},
+  journal={Open Medicine},
+  volume={12},
+  number={1},
+  pages={376--383},
+  year={2017},
+  publisher={De Gruyter Open}
+}
+
+@misc{AStudyto73:online,
+author = {{Alkahest Clinical Trials}},
+title = {A Study to Assess the Tolerability and Efficacy of AKST1210 in Patients on Hemodialysis With Cognitive Impairment - Full Text View - ClinicalTrials.gov},
+howpublished = {\url{https://clinicaltrials.gov/ct2/show/NCT04527328?term=Alkahest&draw=2&rank=7}},
+month = {04},
+year = {2020},
+note = {(Accessed on 2021-07-04)}
+}
+
+@article{kapahi2017dietary,
+  title={Dietary restriction and lifespan: Lessons from invertebrate models},
+  author={Kapahi, Pankaj and Kaeberlein, Matt and Hansen, Malene},
+  journal={Ageing research reviews},
+  volume={39},
+  pages={3--14},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{mair2005calories,
+  title={Calories do not explain extension of life span by dietary restriction in Drosophila},
+  author={Mair, William and Piper, Matthew D W and Partridge, Linda},
+  journal={PLoS biology},
+  volume={3},
+  number={7},
+  pages={e223},
+  year={2005},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@misc{TAMETarg47:online,
+author = {{TAME}, {American Federation for Aging Research}},
+title = {{TAME - Targeting Aging with Metformin - American Federation for Aging Research}},
+howpublished = {\url{https://www.afar.org/tame-trial}},
+year = {2021},
+note = {(Accessed on 2021-07-04)}
+}
+
+@misc{Particip66:online,
+author = {{AgelessRx}},
+title = {Participatory Evaluation (of) Aging (With) Rapamycin (for) Longevity Study - Full Text View - ClinicalTrials.gov},
+howpublished = {\url{https://clinicaltrials.gov/ct2/show/NCT04488601}},
+year = {2020},
+note = {(Accessed on 2021-07-04)}
+}
+
+@article{martin2013metformin,
+  title={Metformin improves healthspan and lifespan in mice},
+  author={Martin-Montalvo, Alejandro and Mercken, Evi M and Mitchell, Sarah J and Palacios, Hector H and Mote, Patricia L and Scheibye-Knudsen, Morten and Gomes, Ana P and Ward, Theresa M and Minor, Robin K and Blouin, Marie-Jos{\'e} and others},
+  journal={Nature communications},
+  volume={4},
+  number={1},
+  pages={1--9},
+  year={2013},
+  publisher={Nature Publishing Group}
+}
+
