--- a/anti-aging/main.tex
+++ b/anti-aging/main.tex
@@ -27,13 +27,14 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \include{chapters/introduction}
-\include{chapters/why-problem}
-\include{chapters/necessary}
-\include{chapters/aging}
-\include{chapters/mechanisms-root-causes}
+% \include{chapters/why-problem}
+% \include{chapters/necessary}
+% \include{chapters/aging}
+% % \include{chapters/mechanisms-root-causes}
+% \include{chapters/important-pathways}
 \include{chapters/slow-aging}
-\include{chapters/personal-strategies}
-\include{chapters/bioinformatics}
+% \include{chapters/personal-strategies}
+% \include{chapters/bioinformatics}
 
 % '\include'
 % - gives speed bonus when building, through caching in a seperate *.aux file
@@ -67,6 +68,6 @@
 \bibliography{references.bib}
 \end{frame}
 
-\include{chapters/additional}
+% \include{chapters/additional}
 
 \end{document}
