[anti-aging] continued progress

--- a/anti-aging/main.tex
+++ b/anti-aging/main.tex
@@ -31,7 +31,7 @@
 % \include{chapters/necessary}
 % \include{chapters/aging}
 % % \include{chapters/mechanisms-root-causes}
-% \include{chapters/important-pathways}
+% % \include{chapters/important-pathways}
 \include{chapters/slow-aging}
 % \include{chapters/personal-strategies}
 % \include{chapters/bioinformatics}
