--- a/anti-aging/references.bib
+++ b/anti-aging/references.bib
@@ -406,7 +406,7 @@ note = {(Accessed on 2021-07-03)}
 }
 
 @misc{AStudyto73:online,
-author = {{Alkahest Clinical Trials}},
+author = {{Alkahest}},
 title = {A Study to Assess the Tolerability and Efficacy of AKST1210 in Patients on Hemodialysis With Cognitive Impairment - Full Text View - ClinicalTrials.gov},
 howpublished = {\url{https://clinicaltrials.gov/ct2/show/NCT04527328?term=Alkahest&draw=2&rank=7}},
 month = {04},
@@ -460,5 +460,64 @@ note = {(Accessed on 2021-07-04)}
   pages={1--9},
   year={2013},
   publisher={Nature Publishing Group}
+}
+
+@article{erbaba2020effects,
+  title={Effects of caloric restriction on the antagonistic and integrative hallmarks of aging},
+  author={Erbaba, Begun and Arslan-Ergul, Ayca and Adams, Michelle M},
+  journal={Ageing Research Reviews},
+  pages={101228},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{swindell2012dietary,
+  title={Dietary restriction in rats and mice: a meta-analysis and review of the evidence for genotype-dependent effects on lifespan},
+  author={Swindell, William R},
+  journal={Ageing research reviews},
+  volume={11},
+  number={2},
+  pages={254--270},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@misc{Nacktmul31:online,
+author = {Roman Klementschitz},
+title = {Nacktmull - Naked mole-rat - Wikipedia},
+howpublished = {\url{https://en.wikipedia.org/wiki/Naked_mole-rat#/media/File:Nacktmull.jpg}},
+month = {12},
+year = {2003},
+note = {(Accessed on 2021-07-05)}
+}
+
+@misc{Tortoise98:online,
+author = {Childzy},
+title = {Tortoise - Wikipedia},
+howpublished = {\url{https://en.wikipedia.org/wiki/Tortoise#/media/File:A._gigantea_Aldabra_Giant_Tortoise.jpg}},
+month = {09},
+year = {2008},
+note = {(Accessed on 2021-07-05)}
+}
+
+@article{baker2016naturally,
+  title={{Naturally occurring p16 Ink4a-positive cells shorten healthy lifespan}},
+  author={Baker, Darren J and Childs, Bennett G and Durik, Matej and Wijers, Melinde E and Sieben, Cynthia J and Zhong, Jian and Saltness, Rachel A and Jeganathan, Karthik B and Verzosa, Grace Casaclang and Pezeshki, Abdulmohammad and others},
+  journal={Nature},
+  volume={530},
+  number={7589},
+  pages={184--189},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+
+@article{paez2019targeting,
+  title={Targeting senescent cells in translational medicine},
+  author={Paez-Ribes, Marta and Gonz{\'a}lez-Gualda, Estela and Doherty, Gary J and Mu{\~n}oz-Esp{\'\i}n, Daniel},
+  journal={EMBO molecular medicine},
+  volume={11},
+  number={12},
+  pages={e10234},
+  year={2019}
 }
 
