--- a/anti-aging/setup.tex
+++ b/anti-aging/setup.tex
@@ -83,7 +83,7 @@
     \usebeamerfont{section title}
     % \insertsectionhead\\[-1ex]
     \tableofcontents[currentsection, hideallsubsections]
-    \usebeamertemplate*{progress bar in section page} % progress bar
+    % \usebeamertemplate*{progress bar in section page} % progress bar
   \end{minipage}
 \end{frame}
 }
@@ -224,7 +224,7 @@
     \usebeamercolor[fg]{section title}
     \tableofcontents[hideallsubsections]
 %   \tableofcontents[]
-    \usebeamertemplate*{progress bar in section page} % progress bar
+    % \usebeamertemplate*{progress bar in section page} % progress bar
     \end{minipage}
 \end{frame}
 \fi
