[anti-aging] finished sec slow-aging and personal

--- a/anti-aging/references.bib
+++ b/anti-aging/references.bib
@@ -521,3 +521,131 @@ note = {(Accessed on 2021-07-05)}
   year={2019}
 }
 
+@article{ofenbauer2019strategies,
+  title={Strategies for in vivo reprogramming},
+  author={Ofenbauer, Andreas and Tursun, Baris},
+  journal={Current opinion in cell biology},
+  volume={61},
+  pages={9--15},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{takahashi2006induction,
+  title={Induction of pluripotent stem cells from mouse embryonic and adult fibroblast cultures by defined factors},
+  author={Takahashi, Kazutoshi and Yamanaka, Shinya},
+  journal={cell},
+  volume={126},
+  number={4},
+  pages={663--676},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{ocampo2016vivo,
+  title={In vivo amelioration of age-associated hallmarks by partial reprogramming},
+  author={Ocampo, Alejandro and Reddy, Pradeep and Martinez-Redondo, Paloma and Platero-Luengo, Aida and Hatanaka, Fumiyuki and Hishida, Tomoaki and Li, Mo and Lam, David and Kurita, Masakazu and Beyret, Ergin and others},
+  journal={Cell},
+  volume={167},
+  number={7},
+  pages={1719--1733},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{hollbacher2020seq,
+  title={Seq-ing answers: Current data integration approaches to uncover mechanisms of transcriptional regulation},
+  author={H{\"o}llbacher, Barbara and Bal{\'a}zs, Kinga and Heinig, Matthias and Uhlenhaut, N Henriette},
+  journal={Computational and structural biotechnology journal},
+  volume={18},
+  pages={1330--1341},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{fahy2019reversal,
+  title={Reversal of epigenetic aging and immunosenescent trends in humans},
+  author={Fahy, Gregory M and Brooke, Robert T and Watson, James P and Good, Zinaida and Vasanawala, Shreyas S and Maecker, Holden and Leipold, Michael D and Lin, David TS and Kobor, Michael S and Horvath, Steve},
+  journal={Aging cell},
+  volume={18},
+  number={6},
+  pages={e13028},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@article{mohar2012sirtuin,
+  title={The sirtuin system: the holy grail of resveratrol?},
+  author={Mohar, Dilbahar S and Malik, Shaista},
+  journal={Journal of clinical \& experimental cardiology},
+  volume={3},
+  number={11},
+  year={2012},
+  publisher={NIH Public Access}
+}
+
+@article{aman2018therapeutic,
+  title={Therapeutic potential of boosting NAD+ in aging and age-related diseases},
+  author={Aman, Yahyah and Qiu, Yumin and Tao, Jun and Fang, Evandro F},
+  journal={Translational Medicine of Aging},
+  volume={2},
+  pages={30--37},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{willcox2007caloric,
+  title={Caloric restriction, the traditional Okinawan diet, and healthy aging: the diet of the world's longest-lived people and its potential impact on morbidity and life span},
+  author={Willcox, Bradley J and Willcox, D Craig and Todoriki, Hidemi and Fujiyoshi, Akira and Yano, Katsuhiko and He, Qimei and Curb, J David and Suzuki, Makoto},
+  journal={Annals of the New York Academy of Sciences},
+  volume={1114},
+  number={1},
+  pages={434--455},
+  year={2007},
+  publisher={Blackwell Publishing Inc Malden, USA}
+}
+
+@article{lee1995exercise,
+  title={Exercise intensity and longevity in men: the Harvard Alumni Health Study},
+  author={Lee, I-Min and Hsieh, Chung-cheng and Paffenbarger, Ralph S},
+  journal={Jama},
+  volume={273},
+  number={15},
+  pages={1179--1184},
+  year={1995},
+  publisher={American Medical Association}
+}
+
+@article{olsen1991social,
+  title={Social networks and longevity. A 14 year follow-up study among elderly in Denmark},
+  author={Olsen, Rolf Bang and Olsen, J{\o}rn and Gunner-Svensson, Finn and Waldstr{\o}m, Bodil},
+  journal={Social science \& medicine},
+  volume={33},
+  number={10},
+  pages={1189--1195},
+  year={1991},
+  publisher={Elsevier}
+}
+
+@article{diener2011happy,
+  title={Happy people live longer: Subjective well-being contributes to health and longevity},
+  author={Diener, Ed and Chan, Micaela Y},
+  journal={Applied Psychology: Health and Well-Being},
+  volume={3},
+  number={1},
+  pages={1--43},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{cuijpers2002excess,
+  title={Excess mortality in depression: a meta-analysis of community studies},
+  author={Cuijpers, Pim and Smit, Filip},
+  journal={Journal of affective disorders},
+  volume={72},
+  number={3},
+  pages={227--236},
+  year={2002},
+  publisher={Elsevier}
+}
+
