[anti-aging] intermediate

--- a/anti-aging/references.bib
+++ b/anti-aging/references.bib
@@ -649,3 +649,68 @@ note = {(Accessed on 2021-07-05)}
   publisher={Elsevier}
 }
 
+@article{kruempel2019computational,
+  title={Computational tools for geroscience},
+  author={Kruempel, Joseph CP and Howington, Marshall B and Leiser, Scott F},
+  journal={Translational medicine of aging},
+  volume={3},
+  pages={132--143},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{kenyon2010genetics,
+  title={The genetics of ageing},
+  author={Kenyon, Cynthia J},
+  journal={Nature},
+  volume={464},
+  number={7288},
+  pages={504--512},
+  year={2010},
+  publisher={Nature Publishing Group}
+}
+
+@article{kerber2009gene,
+  title={Gene expression profiles associated with aging and mortality in humans},
+  author={Kerber, Richard A and O’Brien, Elizabeth and Cawthon, Richard M},
+  journal={Aging Cell},
+  volume={8},
+  number={3},
+  pages={239--250},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
+@article{nakamura2007method,
+  title={A method for identifying biomarkers of aging and constructing an index of biological age in humans},
+  author={Nakamura, Eitaro and Miyao, Kenji},
+  journal={The Journals of Gerontology Series A: Biological Sciences and Medical Sciences},
+  volume={62},
+  number={10},
+  pages={1096--1105},
+  year={2007},
+  publisher={Oxford University Press}
+}
+
+@article{putin2016deep,
+  title={Deep biomarkers of human aging: application of deep neural networks to biomarker development},
+  author={Putin, Evgeny and Mamoshina, Polina and Aliper, Alexander and Korzinkin, Mikhail and Moskalev, Alexey and Kolosov, Alexey and Ostrovskiy, Alexander and Cantor, Charles and Vijg, Jan and Zhavoronkov, Alex},
+  journal={Aging (Albany NY)},
+  volume={8},
+  number={5},
+  pages={1021},
+  year={2016},
+  publisher={Impact Journals, LLC}
+}
+
+@article{townes2020identifying,
+  title={Identifying longevity associated genes by integrating gene expression and curated annotations},
+  author={Townes, F William and Carr, Kareem and Miller, Jeffrey W},
+  journal={PLoS Computational Biology},
+  volume={16},
+  number={11},
+  pages={e1008429},
+  year={2020},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
