--- a/anti-aging/main.tex
+++ b/anti-aging/main.tex
@@ -26,15 +26,16 @@
 % \fi
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \include{chapters/introduction}
-% \include{chapters/why-problem}
-% \include{chapters/necessary}
-% \include{chapters/aging}
-% % \include{chapters/mechanisms-root-causes}
-% % \include{chapters/important-pathways}
+\include{chapters/introduction}
+\include{chapters/why-problem}
+\include{chapters/necessary}
+\include{chapters/aging}
+% \include{chapters/mechanisms-root-causes}
+% \include{chapters/important-pathways}
 \include{chapters/slow-aging}
-% \include{chapters/personal-strategies}
-% \include{chapters/bioinformatics}
+\include{chapters/personal-strategies}
+\include{chapters/bioinformatics}
+\include{chapters/conclusion}
 
 % '\include'
 % - gives speed bonus when building, through caching in a seperate *.aux file
@@ -57,7 +58,7 @@
 \addtocounter{framenumber}{1}
 \begin{frame}[standout]
     \LARGE
-    Questions?
+    What are your Questions?
 \end{frame}
 
 
