--- a/anti-aging/references.bib
+++ b/anti-aging/references.bib
@@ -714,3 +714,32 @@ note = {(Accessed on 2021-07-05)}
   publisher={Public Library of Science San Francisco, CA USA}
 }
 
+@article{lukic2005shared,
+  title={Shared circulation in parabiosis leads to the transfer of bone phenotype from gld to the wild-type mice},
+  author={Luki{\'c}, Ivan Kre{\v{s}}imir and Kova{\v{c}}i{\'c}, Nata{\v{s}}a and Katavi{\'c}, Vedran and Gr{\v{c}}evi{\'c}, Danka and Iv{\v{c}}evi{\'c}, Sanja and Maru{\v{s}}i{\'c}, Ana},
+  journal={Cellular immunology},
+  volume={233},
+  number={2},
+  pages={133--139},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{baek2021rosetta,
+  title={Accurate prediction of protein structures and interactions using a three-track neural network},
+  author={Baek, Minkyung and DiMaio, Frank and Anishchenko, Ivan and Dauparas, Justas},
+  journal={Science},
+  doi={https://doi.org/10.1126/science.abj8754},
+  year={2021},
+  publisher={}
+}
+
+@article{jumper2021alphafold,
+  title={Highly accurate protein structure prediction with AlphaFold},
+  author={{Jumper et al.}},
+  journal={Nature},
+  doi={https://doi.org/10.1038/s41586-021-03819-2},
+  year={2021},
+  publisher={}
+}
+
