[anti-aging] presentation 2 version

--- a/anti-aging/references.bib
+++ b/anti-aging/references.bib
@@ -731,7 +731,6 @@ note = {(Accessed on 2021-07-05)}
   journal={Science},
   doi={https://doi.org/10.1126/science.abj8754},
   year={2021},
-  publisher={}
 }
 
 @article{jumper2021alphafold,
@@ -740,6 +739,28 @@ note = {(Accessed on 2021-07-05)}
   journal={Nature},
   doi={https://doi.org/10.1038/s41586-021-03819-2},
   year={2021},
-  publisher={}
 }
 
+@article{podhorecka2017metformin,
+  title={Metformin-its potential anti-cancer and anti-aging effects.},
+  author={Podhorecka, Monika and Ibanez, Blanca and Dmoszy{\'n}ska, Anna},
+  journal={Advances in Hygiene \& Experimental Medicine/Postepy Higieny i Medycyny Doswiadczalnej},
+  volume={71},
+  year={2017}
+}
+
+@article{dolgin2020send,
+  title={Send in the senolytics.},
+  author={Dolgin, Elie},
+  journal={Nature Biotechnology},
+  year={2020}
+}
+
+@misc{jameswag39:online,
+author = {James Wagstaff},
+title = {{james wagstaff on Twitter: "Alphafold2 dominant at \#CASP14 - looking forward to finding out how! https://t.co/kEzkk2v6zS" / Twitter}},
+howpublished = {\url{https://twitter.com/jamesmwag/status/1333363332049477633}},
+month = {10},
+year = {2020},
+note = {(Accessed on 2021-07-04)}
+}
