--- a/anti-aging/setup.tex
+++ b/anti-aging/setup.tex
@@ -12,6 +12,7 @@
 % \usepackage{minted}
 % \usemintedstyle{pastie}
 
+% \renewcommand*{\bibfont}{\footnotesize}
 
 \usetheme[numbering=counter, progressbar=frametitle, subsectionpage=progressbar, block=fill]{metropolis}
 
@@ -188,6 +189,12 @@
 \newcommand{\orang}[1]{
     \textcolor{orang1}{#1}
 }
+
+\setbeamerfont{bibliography item}{size=\scriptsize}
+\setbeamerfont{bibliography entry author}{size=\scriptsize}
+\setbeamerfont{bibliography entry title}{size=\footnotesize}
+\setbeamerfont{bibliography entry location}{size=\scriptsize}
+\setbeamerfont{bibliography entry note}{size=\scriptsize}
 
 
 
