--- a/anti-aging/main.tex
+++ b/anti-aging/main.tex
@@ -14,70 +14,28 @@
 \include{setup}
 
 
-
-\newif\ifonline
-\onlinefalse
-% \onlinefalse
-% usage:
-% \ifonline
-%   <true text>
-% \else % <- optional
-%   <false text>
-% \fi
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \include{chapters/introduction}
 \include{chapters/why-problem}
 \include{chapters/necessary}
 \include{chapters/aging}
-% \include{chapters/mechanisms-root-causes}
-% \include{chapters/important-pathways}
+% % \include{chapters/mechanisms-root-causes}
+% % \include{chapters/important-pathways}
 \include{chapters/slow-aging}
 \include{chapters/personal-strategies}
 \include{chapters/bioinformatics}
 \include{chapters/conclusion}
 
-% '\include'
-% - gives speed bonus when building, through caching in a seperate *.aux file
-% - has a 'page break'
-% - cannot be nested
-% ------------- VS -------------
-% '\input'
-% - can be nested
-% - does not have 'page breaks'
-% - gives no caching benefit
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SOURCES%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-\addtocounter{framenumber}{1}
-\begin{frame}[standout]
-    \LARGE
-    What are your Questions?
-    \pnote{
-        Biological Aging state machines \\
-        Hallmarks of Aging details \\
-        Indications for common/shared aging Pathways \\
-    }
-\end{frame}
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BACKUP%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \appendix
 \backupbegin
 
-\begin{frame}[c,fragile,allowframebreaks]{Sources}
-% \bibliographystyle{plainnat}
-\bibliographystyle{apalike}
-% \bibliographystyle{ieeetr}
-\bibliography{references.bib}
-\end{frame}
-
+\include{chapters/sources}
 \include{chapters/additional}
+
 \backupend
 
 \end{document}
