[lsdf] make substantial progress on presentation

--- a/lsdf/main_handout.tex
+++ b/lsdf/main_handout.tex
@@ -1,2 +1,3 @@
 \documentclass[12pt,compress,ngerman,english,utf8,t,usenames,dvipsnames,handout,aspectratio=169]{beamer}
+\usepackage[outputdir={\detokenize{out/main_handout}}]{minted}
 \input{main}
