--- a/lsdf/main.tex
+++ b/lsdf/main.tex
@@ -1,11 +1,11 @@
 \usepackage[ngerman, english]{babel}
 
 
-\title{LSDF-Portal: Project management for the Large~Scale~Data~Facility} % ~ is a nonbreaking space
+\title{LSDF-Portal: Project administration for the Large~Scale~Data~Facility} % ~ is a nonbreaking space
 \author{Felix Karg}
 
 
-\graphicspath{ {./img/} {../template/} {../template_tex/} } % add further graphics paths here
+\graphicspath{ {./img/} {../template/} {../template_tex/} {./code/} } % add further import paths here
 
 \newif\iftwocols
 \twocolsfalse
@@ -15,36 +15,12 @@
 
 
 
-\newif\ifonline
-\onlinefalse
-% \onlinefalse
-% usage:
-% \ifonline
-%   <true text>
-% \else % <- optional
-%   <false text>
-% \fi
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \include{chapters/before}
 \include{chapters/django}
 \include{chapters/features}
-% % \include{chapters/refactoring}
-\include{chapters/other}
-
-% \include{chapters/introduction}
-
-% '\include'
-% - gives speed bonus when building, through caching in a seperate *.aux file
-% - has a 'page break'
-% - cannot be nested
-% ------------- VS -------------
-% '\input'
-% - can be nested
-% - does not have 'page breaks'
-% - gives no caching benefit
-
-
+\include{chapters/conclusion}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -57,6 +33,6 @@
 \bibliography{references.bib}
 \end{frame}
 
-% \include{chapters/additional}
+\include{chapters/additional}
 
 \end{document}
